--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 ﻿{
   "name": "YouTube Live to Google Calendar",
   "short_name": "YouTubeLive2Calendar",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "manifest_version": 2,
-  "description": "YouTube Live to Google Calendarは、YouTubeライブにリマインダー(チャンネル通知ではありません)を設定した際、その予定をGoogleカレンダー上に作成します。",
+  "description": "リマインダーを設定したYouTubeライブの予定をGoogleカレンダーに追加します。",
   "icons": {
     "128": "icon.png"
   },
