--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-	"name": "YouTube™ Live to Google Calendar™",
-	"short_name": "YouTubeLive2Calendar",
-	"version": "2.0.2",
+	"name": "Reminder Plus for YouTube™",
+	"short_name": "YouTubeReminder+",
+	"version": "2.0.3",
 	"manifest_version": 2,
 	"description": "配信予定のYouTube™ライブにリマインダーを設定すると、その予定をGoogleカレンダー™に追加します。",
 	"icons": {
